# maxcso

./: CMakeLists.txt
cmake/: 7zip.cmake  Zopfli.cmake
